--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-torch == 2.2.0
-torchvision == 0.17.0
+torch == 2.0.1
+torchvision == 0.15.2
 openmim==0.3.9
 gradio==4.18.0
+
+--extra-index-url https://download.openmmlab.com/mmcv/dist/cpu/torch2.0/index.html
+mmcv==2.0.0
